<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="launch_name">Clash</string>
    <string name="application_name">Clash</string>

    <string name="stopped">Stopped</string>
    <string name="running">Running</string>

    <string name="proxy">Proxy</string>

    <string name="profiles">Profiles</string>
    <string name="not_selected">Not selected</string>

    <string name="copied">Copied</string>

    <string name="format_elements">%d elements</string>

    <string name="create_profile">Create Profile</string>
    <string name="file">File</string>
    <string name="import_from_file">Import from File</string>
    <string name="url">URL</string>
    <string name="import_from_url">Import from URL</string>
    <string name="external">External</string>
    <string name="format_type_unsaved">%s (Unsaved)</string>

    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_url">Profile URL</string>

    <string name="should_not_be_blank">Should not be blank</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="properties">Properties</string>
    <string name="duplicate">Duplicate</string>

    <string name="raw_cn" translatable="false">cn</string>
    <string name="disabled">Disabled</string>
    <string name="unavailable">Unavailable</string>
    <string name="empty_name">Empty Name</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="loading">Loading</string>

    <string name="format_fetching_configuration">Fetching configuration from \'%s\'</string>
    <string name="format_fetching_provider">Fetching provider \'%s\'</string>

    <string name="new_profile">New Profile</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    
    <string name="file_exported">File Exported</string>

    <string name="general">General</string>
    <string name="dns">DNS</string>

    <string name="_new">New</string>

    <string name="dont_modify">Do not modify</string>
    <string name="empty">Empty</string>

    <string name="enabled">Enabled</string>

    <string name="error">Error</string>

    <string name="clash">Clash</string>

    <string name="service">Service</string>

    <string name="no_profile_selected">No profile selected</string>

    <string name="providers">Providers</string>

    <string name="files">Files</string>
    <string name="browse_files">Browse Files</string>
    <string name="browse_configuration_providers"><![CDATA[Browse configuration & providers]]></string>
    <string name="rename">Rename</string>
    <string name="file_name">File Name</string>
    <string name="invalid_file_name">Invalid file name</string>
    
    <string name="use_built_in">Use Built-in</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="delay_test">Delay Test</string>

    <string name="format_provider_type">%1$s(%2$s)</string>

    <string name="close">Close</string>
</resources>
